<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Schedule_Mon">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_2" />


    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="Date"
        android:textColor="@color/colorBlack"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="371dp"
        android:layout_height="365dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282">

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/left_event_column"
                android:layout_width="371dp"
                android:layout_height="match_parent"
                android:layout_weight="8">

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="120dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="180dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="240dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="300dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="360dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="420dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="480dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="540dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="600dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="660dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="720dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="780dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="840dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="900dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="960dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1020dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1080dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1140dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1200dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1260dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1320dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1380dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1440dp"
                    android:background="@color/colorDivider" />

                <View
                    android:layout_width="371dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="1500dp"
                    android:background="@color/colorDivider" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="83dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/buttonOfferedCourses"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="Offered Courses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916">

        <Button
            android:id="@+id/buttonMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="Mon" />

        <Button
            android:id="@+id/buttonTue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightOrange"
            android:text="TUE" />

        <Button
            android:id="@+id/buttonWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="Wed" />

        <Button
            android:id="@+id/buttonThu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightOrange"
            android:text="Thu" />

        <Button
            android:id="@+id/buttonFri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="Fri" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>